<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TransTech</string>
    <string name="action_logout">LogOut</string>
    <string name="action_aboutus">About Us</string>
    <string name="hello_world">Hello world!</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="navigation_drawer_items_array">
        <item>Tasks</item>
        <item>Alert</item>
        <item>History</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="customer">Customer</string>
    <string name="atm_detaisl">Atm Details</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="summeryanddesc">Summary and Description</string>
    <string name="no_comments">No Comments</string>
    <string name="transactional_stickers_faded">Transactional Stickers faded</string>
    <string name="collect_cash">Collect Cash</string>
    <string name="collect_receipt"> Collect Receipt</string>
    <string name="insert_card">Insert card</string>
    <string name="insert_cash">Insertcash</string>
    <string name="network_sticker"> Network sticker</string>
    <string name="instruction_sticker">Instruction sticker</string>
    <string name="vault_branding">Vault branding</string>
    <string name="atm_id">ATM ID</string>
    <string name="key_pad_displaced"> key Pad Displaced</string>
    <string name="spot_lights_off">Spot lights off</string>
    <string name="decals">Decals</string>
    <string name="atm_tower_branding">ATM Tower branding</string>
    <string name="canopy_branding">Canopy branding</string>
    <string name="surround_lock_is_damageFaulty">Surround Lock is damage/ Faulty</string>
    <string name="spot_light_is_off">Spot Light is off</string>
    <string name="main_board_lights_are_off">Main board Lights are off</string>
    <string name="security_camera_is_out_of_focus">Security Camera is out of focus</string>
    <string name="description_hint">Write your description about alert #8230#8230#8230(minimum 3 words)</string>
    <string name="reason_code">Reason Code</string>
    <string name="remarks_category">Remarks 
        Category</string>
    <string name="survey_now">Survey Now</string>
    <string name="task_details">TaskDetails</string>
    <string name="login_page_company_info_label">Made with some friends at</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="task_list_kms">Kms</string>
    <string name="sort_dialog_confirm_label">Sort</string>
    <string name="cancel">Cancel</string>
    <string name="country">Country</string>
    <string name="distance">Distance</string>
    <string name="duedate">Due date</string>
    <string name="click_image">Click Image</string>
    <string name="submit_but">Submit</string>
    <string name="sort_by_distance">Sort by Distance</string>
    <string name="sort_by_visit_time">Sort by visit time</string>
    <string name="front_view">Front View</string>
    <string name="back_view">Back View</string>
    <string name="side_view">Side View</string>
    <!-- <string name="about_us_description">Trans Tech begain it\\'s humble roots</string> -->
    <string name="about_us_text">TransTech started in Dubai in the year 2003 .
We reached the impressive mile-stone of servicing 60% of ATMs in UAE with it\'s products and services in 2011-2013 from offices in Sharjah Airport Free Zone, Qatar, Oman and Saudi Arabia.
\n                    With 10 years and multiple achievements, we continue to satisfy customers at cost-effective prices.</string>

</resources>