<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 
 
    <CheckBox
        android:id="@+id/no_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="19dp"
        
        android:text="@string/no_comments" />
 
 
    <CheckBox
        android:id="@+id/transactional_stickers_faded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/no_comments"
        
        android:text="@string/transactional_stickers_faded" />
 
 
    <CheckBox
        android:id="@+id/collect_cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/transactional_stickers_faded"
        android:text="@string/collect_cash" />
 
 
    <CheckBox
        android:id="@+id/collect_receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/collect_cash"
        android:text="@string/collect_receipt" />
 
 
    <CheckBox
        android:id="@+id/insert_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/collect_receipt"
        android:text="@string/insert_card" />
 
 
    <CheckBox
        android:id="@+id/insert_cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/insert_card"
        android:layout_below="@+id/insert_card"
        android:text="@string/insert_cash" />
 
    <CheckBox
        android:id="@+id/network_sticker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/insert_cash"
        android:text="@string/network_sticker" />
 
    <CheckBox
        android:id="@+id/instruction_sticker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/network_sticker"
        android:text="@string/instruction_sticker" />
 
 
    <CheckBox
        android:id="@+id/vault_branding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/instruction_sticker"
        android:text="@string/vault_branding" />
 
 
    <CheckBox
        android:id="@+id/atm_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/vault_branding"
        android:text="@string/atm_id" />
 
 
</RelativeLayout>