<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingLeft="10dp">
 
 
    <CheckBox
        android:id="@+id/keyp_Pad_displaced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textColor="#3C3C3C"
         android:buttonTint="@color/primary_color"
        android:layout_marginTop="5dp"
        android:text="@string/key_pad_displaced" />
 
 
    <CheckBox
        android:id="@+id/spot_lights_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textColor="#3C3C3C"
         android:buttonTint="@color/primary_color"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/keyp_Pad_displaced"
        android:text="@string/spot_lights_off" />
 
 
    <CheckBox
        android:id="@+id/decals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textColor="#3C3C3C"
         android:buttonTint="@color/primary_color"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/spot_lights_off"
        android:text="@string/decals" />
 
 
    <CheckBox
        android:id="@+id/atm_tower_branding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:buttonTint="@color/primary_color"
        android:layout_alignParentLeft="true"
        android:textColor="#3C3C3C"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/decals"
        android:text="@string/atm_tower_branding" />
 
 
    <CheckBox
        android:id="@+id/canopy_branding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:buttonTint="@color/primary_color"
        android:layout_alignParentLeft="true"
        android:textColor="#3C3C3C"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/atm_tower_branding"
        android:text="@string/canopy_branding" />
 
 
    <CheckBox
        android:id="@+id/surround_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textColor="#3C3C3C"
         android:buttonTint="@color/primary_color"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/canopy_branding"
        android:text="@string/surround_lock_is_damageFaulty" />
 
 
    <CheckBox
        android:id="@+id/spot_light_is_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textColor="#3C3C3C"
         android:buttonTint="@color/primary_color"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/surround_lock"
        android:text="@string/spot_light_is_off" />
 
 
    <CheckBox
        android:id="@+id/main_board_lights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textColor="#3C3C3C"
         android:buttonTint="@color/primary_color"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/spot_light_is_off"
        android:text="@string/main_board_lights_are_off" />
 
 
    <CheckBox
        android:id="@+id/security_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textColor="#3C3C3C"
         android:buttonTint="@color/primary_color"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/main_board_lights"
        android:text="@string/security_camera_is_out_of_focus" />
     <Spinner
        android:id="@+id/remark_category"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/textView8"
         android:layout_alignBottom="@+id/textView8"
        android:layout_alignParentRight="true"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/security_camera"
        android:layout_toRightOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/security_camera"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:text="@string/remarks_category"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
 
 
</RelativeLayout>