<?xml version="1.0" encoding="utf-8"?>

 <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/scrollView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
                  >
    <RelativeLayout 
             
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical" >
            
       <android.support.v7.widget.CardView
         android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        app:cardUseCompatPadding="true" >
        <RelativeLayout 
   
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical" >
             <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="33dp"
            android:layout_toLeftOf="@+id/customer_spinner"
            android:text="@string/customer"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/atm_detaisl"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/state_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/customer_spinner"
            android:layout_below="@+id/customer_spinner" />

           <Spinner
               android:id="@+id/customer_spinner"
               android:layout_width="wrap_content"
               android:layout_height="40dp"
               android:layout_alignLeft="@+id/textView2"
               android:layout_alignParentRight="true"
               android:layout_below="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView1"
                android:text="State"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/state_spinner"
                android:layout_marginTop="13dp"
                android:text="Atm"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/atm_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignLeft="@+id/state_spinner"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/state_spinner" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/atm_spinner"
                android:layout_marginTop="14dp"
                android:text="Category"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignLeft="@+id/atm_spinner"
                android:layout_below="@+id/atm_spinner" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/category_spinner"
                android:layout_marginTop="11dp"
                android:text="Priority"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/priority_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignLeft="@+id/category_spinner"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/category_spinner" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/priority_spinner"
                android:layout_marginTop="10dp"
                android:text="Assign To"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/assigto_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignLeft="@+id/priority_spinner"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/priority_spinner" />

        
            
            </RelativeLayout>
            </android.support.v7.widget.CardView>
             
                 
          <android.support.v7.widget.CardView
             android:id="@+id/card2"
             android:layout_below="@+id/card1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:padding="5dp"
             app:cardUseCompatPadding="true" >
           
     
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

              <EditText
                  android:id="@+id/description_text"
                  android:layout_width="wrap_content"
                  android:layout_height="80dp"
                  android:layout_alignParentRight="true"
                  android:layout_alignTop="@+id/textView10"
                  android:layout_toRightOf="@+id/textView8"
                  android:background="@drawable/alert_text"
                  android:ems="10"
                  android:hint="@string/description_hint"
                  android:inputType="textMultiLine" />

              <Button
                  android:id="@+id/alert_submit"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/description_text"
                  android:layout_centerHorizontal="true"
                  android:layout_marginTop="25dp"
                  android:background="#3276B1"
                  android:padding="5dp"
                  android:text="@string/submit"
                  android:textColor="#ffffff" />

              <TextView
                  android:id="@+id/textView10"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignParentLeft="true"
                  android:layout_below="@+id/summery_text"
                  android:layout_marginTop="20dp"
                  android:text="@string/description"
                  android:textAppearance="?android:attr/textAppearanceMedium" />

              <TextView
                  android:id="@+id/textView7"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerHorizontal="true"
                  android:layout_marginTop="19dp"
                  android:text="@string/summeryanddesc"
                  android:textAppearance="?android:attr/textAppearanceLarge" />

              <TextView
                  android:id="@+id/textView8"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignParentLeft="true"
                  android:layout_below="@+id/textView7"
                  android:layout_marginTop="24dp"
                  android:text="@string/reason_code"
                  android:textAppearance="?android:attr/textAppearanceMedium" />

              <Spinner
                  android:id="@+id/reasonscode_pinner"
                  android:layout_width="match_parent"
                  android:layout_height="40dp"
                  android:layout_alignBottom="@+id/textView8"
                  android:layout_alignLeft="@+id/description_text"
                  android:layout_alignParentRight="true" />

              <TextView
                  android:id="@+id/textView9"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  
                  android:layout_below="@+id/textView8"
                  android:layout_marginTop="15dp"
                  android:text="Summary"
                  android:textAppearance="?android:attr/textAppearanceMedium" />

              <EditText
                  android:id="@+id/summery_text"
                  android:layout_width="wrap_content"
                  android:layout_height="40dp"
                  android:layout_alignBaseline="@+id/textView9"
                  android:layout_alignBottom="@+id/textView9"
                  android:layout_alignParentRight="true"
                  android:layout_toRightOf="@+id/textView8"
                  android:background="@drawable/alert_text"
                  android:ems="10" >

                  <requestFocus />
              </EditText>
          </RelativeLayout>
         
          </android.support.v7.widget.CardView>
          </RelativeLayout>
 </ScrollView>
          

